
cc_library(
	name = "xpressive",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_proto//:proto",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_conversion//:conversion",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_preprocessor//:preprocessor",
		"@com_github_bazelboost_typeof//:typeof",
		"@com_github_bazelboost_exception//:exception",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_regex//:regex"
	],
)
